result/subtask02-comment/testcase03.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
STR_LIT "Hello World!"
cout string
/mnt/c/Users/ncc/Desktop/2024-Spring-NCKU-CompilerHW2/input/subtask02-comment/testcase03.cpp:13:1: error:  syntax error
    13 |} 
       |^
Total lines: 13
